# pybind-smoothing

./: .gitignore  CMakeLists.txt
source/module/: module.cpp  smoothing.cpp  smoothing.h
